// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders matching snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
        testID="login"
      >
        <Image
          resizeMethod="auto"
          source={1}
          style={
            {
              "height": 40,
              "marginTop": 10,
              "tintColor": "#121314",
              "width": 80,
            }
          }
        />
        <TouchableOpacity
          activeOpacity={1}
          delayLongPress={10000}
          onLongPress={[Function]}
          style={
            {
              "alignSelf": "center",
              "height": 175,
              "justifyContent": "center",
              "marginTop": 48,
              "width": 175,
            }
          }
        >
          <Image
            resizeMethod="auto"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 175,
                "width": 175,
              }
            }
          />
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 32,
              "letterSpacing": 0,
              "lineHeight": 40,
              "marginVertical": 24,
              "textAlign": "center",
            }
          }
          testID="login-title"
        >
          Welcome Back!
        </Text>
        <View
          style={
            {
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "rowGap": 8,
              "width": "100%",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": -4,
              }
            }
            testID="label"
          >
            Password
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#b7bbc8",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
                "paddingHorizontal": 16,
              }
            }
            testID="textfield"
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <TextInput
                autoCapitalize="none"
                autoFocus={false}
                editable={true}
                keyboardAppearance="light"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter MetaMask password"
                placeholderTextColor="#686e7d"
                returnKeyType="done"
                secureTextEntry={true}
                style={
                  {
                    "backgroundColor": "inherit",
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "height": 24,
                    "letterSpacing": 0,
                    "opacity": 1,
                    "paddingVertical": 0,
                  }
                }
                testID="login-password-input"
                value=""
              />
            </View>
            <View
              style={
                {
                  "marginLeft": 8,
                }
              }
              testID="textfield-endacccessory"
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "rowGap": 2,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "column",
              "marginTop": 24,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            loading={false}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "opacity": 0.5,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="log-in-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Unlock
            </Text>
          </TouchableOpacity>
          <Text
            accessibilityRole="link"
            accessible={true}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginVertical": 14,
              }
            }
            suppressHighlighting={true}
            testID="reset-wallet-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Forgot password?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;

exports[`Login renders matching snapshot when password input is focused 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
        testID="login"
      >
        <Image
          resizeMethod="auto"
          source={1}
          style={
            {
              "height": 40,
              "marginTop": 10,
              "tintColor": "#121314",
              "width": 80,
            }
          }
        />
        <TouchableOpacity
          activeOpacity={1}
          delayLongPress={10000}
          onLongPress={[Function]}
          style={
            {
              "alignSelf": "center",
              "height": 175,
              "justifyContent": "center",
              "marginTop": 48,
              "width": 175,
            }
          }
        >
          <Image
            resizeMethod="auto"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 175,
                "width": 175,
              }
            }
          />
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 32,
              "letterSpacing": 0,
              "lineHeight": 40,
              "marginVertical": 24,
              "textAlign": "center",
            }
          }
          testID="login-title"
        >
          Welcome Back!
        </Text>
        <View
          style={
            {
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "rowGap": 8,
              "width": "100%",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": -4,
              }
            }
            testID="label"
          >
            Password
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#b7bbc8",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
                "paddingHorizontal": 16,
              }
            }
            testID="textfield"
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <TextInput
                autoCapitalize="none"
                autoFocus={false}
                editable={true}
                keyboardAppearance="light"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter MetaMask password"
                placeholderTextColor="#686e7d"
                returnKeyType="done"
                secureTextEntry={true}
                style={
                  {
                    "backgroundColor": "inherit",
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "height": 24,
                    "letterSpacing": 0,
                    "opacity": 1,
                    "paddingVertical": 0,
                  }
                }
                testID="login-password-input"
                value="password"
              />
            </View>
            <View
              style={
                {
                  "marginLeft": 8,
                }
              }
              testID="textfield-endacccessory"
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "rowGap": 2,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "column",
              "marginTop": 24,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            loading={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="log-in-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Unlock
            </Text>
          </TouchableOpacity>
          <Text
            accessibilityRole="link"
            accessible={true}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginVertical": 14,
              }
            }
            suppressHighlighting={true}
            testID="reset-wallet-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Forgot password?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;
